# app/models/document.rb
@@ -2,29 +2,54 @@
 #
 # Table name: documents
 #
-#  id              :bigint           not null, primary key
-#  allowed_methods :string           default([]), is an Array
-#  uuid            :string
-#  created_at      :datetime         not null
-#  updated_at      :datetime         not null
-#  bundle_id       :bigint           not null
-#  user_id         :bigint           not null
+#  id          :bigint           not null, primary key
+#  remote_hash :string
+#  url         :string
+#  uuid        :string
+#  created_at  :datetime         not null
+#  updated_at  :datetime         not null
+#  contract_id :bigint
+#  user_id     :bigint           not null
 #
 # Indexes
 #
-#  index_documents_on_bundle_id  (bundle_id)
-#  index_documents_on_user_id    (user_id)
-#  index_documents_on_uuid       (uuid)
+#  index_documents_on_contract_id  (contract_id)
+#  index_documents_on_user_id      (user_id)
+#  index_documents_on_uuid         (uuid)
 #
 # Foreign Keys
 #
-#  fk_rails_...  (bundle_id => bundles.id)
+#  fk_rails_...  (contract_id => contracts.id)
 #  fk_rails_...  (user_id => users.id)
 #
 class Document < ApplicationRecord
   belongs_to :user
-  belongs_to :bundle
+  belongs_to :contract, optional: true
 
-  has_one :file, class_name: "SigningFile", dependent: :destroy
-  has_one :signing_parameter, class_name: "Ades::SigningParameter", dependent: :destroy
+  has_one :xdc_parameters, class_name: "XdcParameters", dependent: :destroy
+  has_one_attached :blob
+
+  def filename
+    blob.attached? ? blob.filename.to_s : nil
+  end
+
+  def content
+    blob.attached? ? blob.download : nil
+  end
+
+  def content_type
+    blob.attached? ? blob.content_type : nil
+  end
+
+  def validate_signatures
+    AutogramService.validate_signatures(self)
+  end
+
+  def has_signatures?
+    validate_signatures.has_signatures
+  end
+
+  def visualize
+    AutogramService.visualize_document(self)
+  end
 end
